--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Galaxy Devices Sales">
     <meta name="author" content="Galaxy Sales">
-    <meta content="0; url=https://link.coupang.com/a/RmX9i" http-equiv="refresh"></meta>
+    <meta content="0; url=https://link.coupang.com/a/Tyxwi" http-equiv="refresh"></meta>
     <link rel="stylesheet" href="mystyle.css">
   </head>
   <body>
